--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.8.0",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
