--- a/package.json
+++ b/package.json
@@ -13,11 +13,21 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "antd": "^5.8.0",
+    "bcryptjs": "^2.4.3",
+    "http-status": "^1.6.2",
+    "iron-session": "^6.3.1",
+    "mime": "^3.0.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/formidable": "^3.4.0",
+    "@types/mime": "^3.0.1",
+    "formidable": "^3.5.0"
   }
 }
